<resources>
    <string name="app_name" translatable="false">MatApp</string>
    <string name="autor" translatable="false">Joaquin Gustavo Espino de Horta</string>
    <string name="version" translatable="false">Version 1.0.0</string>
    <string name="vector_cross" translatable="false">(X,Y,Z) x (X,Y,Z)</string>
    <string name="inverse_discret" translatable="false">A*B mod C = 1</string>

    <string name="name_product_vec">Producto Cruz</string>
    <string name="name_general_formula">Formula General</string>
    <string name="name_inverse_mod">Inverso Discreto</string>

    <string name="btn_action1">Calcular</string>
    <string name="btn_action2">Normal</string>
    <string name="btn_action3">Volver</string>
    <string name="et_hint1">Escribe un número</string>

    <string name="et_hint2">Valor</string>
    <string name="et_hint3">Modulo</string>

    <string name="et_hint4" translatable="false">A</string>
    <string name="et_hint5" translatable="false">B</string>
    <string name="et_hint6" translatable="false">C</string>

    <string name="et_hint7">Eje X</string>
    <string name="et_hint8">Eje Y</string>
    <string name="et_hint9">Eje Z</string>

    <string name="res_dot">El producto punto es %f</string>
    <string name="res_cross">El producto cruz es (%1$f, %2$f, %3$f)</string>

    <string name="res_x">El resultado X%1$s es %2$f</string>
    <string name="res_x_comp">El resultado X%1$s es %2$f + %3$f i</string>
    <string name="res_x_img">El resultado X%1$s es %2$f i</string>

    <string name="res_invd">El inverso de %1$d mod %2$d es %3$d</string>
    <string name="res_invd_not">El inverso de %1$d no existe para %2$d</string>
    <string name="com_positive">Muy seguramente existe</string>
    <string name="com_negative">Será difícil encontrar</string>
</resources>