<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/app_name"
        android:fontFamily="@font/calligraffitti"
        android:textSize="38sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/tvFormula"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/inverse_discret"
        android:fontFamily="@font/calligraffitti"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/res_invd"
        android:fontFamily="@font/calligraffitti"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFormula" />

    <TextView
        android:id="@+id/tvAnticipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/calligraffitti"
        android:gravity="center"
        android:text="@string/com_positive"
        android:textColor="@color/white"
        android:textSize="20sp"

        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/btnAction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="180dp"

        android:text="@string/btn_action1"
        android:backgroundTint="@color/button_state_colors"
        android:textColor="@color/button_text_state_colors"
        android:fontFamily="@font/press_start_2p"
        android:textSize="5pt"
        android:enabled="false"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />



    <EditText
        android:id="@+id/etNumVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"

        android:ems="5"
        android:gravity="center_horizontal"
        android:hint="@string/et_hint2"
        android:maxLength="5"
        android:textAlignment="center"
        android:textColorHint="@color/button_text_state_colors"
        android:textSize="23sp"
        android:fontFamily="@font/calligraffitti"
        android:inputType="numberSigned"

        app:layout_constraintEnd_toStartOf="@id/etNumMod"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <EditText
        android:id="@+id/etNumMod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"

        android:ems="5"
        android:gravity="center_horizontal"
        android:hint="@string/et_hint3"
        android:maxLength="5"
        android:textAlignment="center"
        android:textColorHint="@color/button_text_state_colors"
        android:textSize="23sp"
        android:fontFamily="@font/calligraffitti"
        android:inputType="number"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/etNumVal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Spinner
        android:id="@+id/spnSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="paren"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>