<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/app_name"
        android:fontFamily="@font/calligraffitti"
        android:textSize="38sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"

        android:text="@string/btn_action1"
        android:backgroundTint="@color/button_state_colors"
        android:textColor="@color/button_text_state_colors"
        android:fontFamily="@font/press_start_2p"
        android:textSize="5pt"
        android:enabled="false"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"

        android:backgroundTint="@color/button_state_colors"
        android:enabled="false"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/btn_action2"
        android:textColor="@color/button_text_state_colors"
        android:textSize="5pt"

        app:layout_constraintBottom_toTopOf="@id/btnAction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etNum1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"

        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/et_hint1"
        android:maxLength="5"
        android:textAlignment="center"
        android:textColorHint="@color/button_text_state_colors"
        android:textSize="23sp"
        android:fontFamily="@font/calligraffitti"
        android:inputType="numberSigned"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>