<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SplashScreen">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:fontFamily="@font/calligraffitti"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="65dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="130dp"
        android:fontFamily="@font/calligraffitti"
        android:gravity="center"
        android:text="@string/version"
        android:textColor="@color/white"
        android:textSize="30sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvAutor"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/calligraffitti"
        android:gravity="center"
        android:text="@string/autor"
        android:textColor="@color/white"
        android:textSize="25sp"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvVersion"/>



</androidx.constraintlayout.widget.ConstraintLayout>