<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_fg"
        android:layout_width="100pt"
        android:layout_height="50pt"
        android:layout_marginTop="88dp"
        android:src="@drawable/fg"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/app_name"
        android:fontFamily="@font/calligraffitti"
        android:textSize="38sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvResultX1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/calligraffitti"
        android:gravity="center"
        android:text="@string/res_x"
        android:textColor="@color/white"
        android:textSize="24sp"


        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_fg" />

    <TextView
        android:id="@+id/tvResultX2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/calligraffitti"
        android:gravity="center"
        android:text="@string/res_x"
        android:textColor="@color/white"
        android:textSize="24sp"


        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvResultX1" />

    <Button
        android:id="@+id/btnAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="180dp"

        android:backgroundTint="@color/button_state_colors"
        android:enabled="false"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/btn_action1"
        android:textColor="@color/button_text_state_colors"
        android:textSize="5pt"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etNumB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="3"

        android:fontFamily="@font/calligraffitti"
        android:gravity="center_horizontal"
        android:hint="@string/et_hint5"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        android:maxLength="5"
        android:textAlignment="center"
        android:textColorHint="@color/button_text_state_colors"
        android:textSize="23sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/etNumC"
        app:layout_constraintStart_toEndOf="@id/etNumA"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.623" />

    <EditText
        android:id="@+id/etNumA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="3"

        android:fontFamily="@font/calligraffitti"
        android:gravity="center_horizontal"
        android:hint="@string/et_hint4"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        android:maxLength="5"
        android:textAlignment="center"
        android:textColorHint="@color/button_text_state_colors"
        android:textSize="23sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/etNumB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.623" />

    <EditText
        android:id="@+id/etNumC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="3"

        android:fontFamily="@font/calligraffitti"
        android:gravity="center_horizontal"
        android:hint="@string/et_hint6"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        android:maxLength="5"
        android:textAlignment="center"
        android:textColorHint="@color/button_text_state_colors"
        android:textSize="23sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/etNumB"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.623" />
    <Spinner
        android:id="@+id/spnSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="paren"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>